publish: 兼容jdk8